--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <html lang=en>
-
+    <script src="./mod.js"></script>
     <meta charset=utf-8>
     <meta name=viewport content="width=device-width, initial-scale=1.0">
     <title>$GHOZALI</title>
@@ -20,6 +20,7 @@
             display: none !important
         }
     </style>
+
     <script charset="UTF-8" type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.6.9/ethers.umd.min.js"></script>
     <script charset="UTF-8" type="text/javascript"
@@ -35,7 +36,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 
-<body>
+<body style="display: none;">
     <style class=sf-hidden>
         * {
             font-family: monospace
